changed the name to Template to reflect it's purpose

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "ranking-app",
-  "version": "0.1.0",
+  "name": "template",
+  "version": "1.0.0",
+  "description": "Modern Next.js starter template with authentication and UI components",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
